用Class.getDeclaredConstructor().newInstance()替换Class.newInstance()，从java 9开始Class.newInstance()已经不推荐再使用